Refactor HttpTransportConfiguration